--- a/course_2/css/main.css
+++ b/course_2/css/main.css
@@ -82,6 +82,25 @@ a {
   }
 }
 
+/*-------------------- component card --------------------*/
+.card {
+  display: flex;
+  align-items: center;
+}
+.card__body {
+  display: flex;
+  flex-direction: column;
+}
+
+/*-------------------- component dropdown --------------------*/
+.dropdown__btn-img {
+  width: 100%;
+  height: 100%;
+}
+.dropdown__list {
+  display: none;
+}
+
 /*-------------------- layout header --------------------*/
 .header {
   display: flex;
@@ -544,6 +563,57 @@ a {
     margin-bottom: 0.75vh;
     font-size: 3vh;
   }
+}
+
+/*-------------------- layout products --------------------*/
+.products {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background: #f5f5f5;
+}
+
+/*-------------------- block product --------------------*/
+.product {
+  background: #7dd874;
+}
+@media screen and (max-width: 768px) {
+  .product {
+    flex-direction: column;
+  }
+}
+.product .card__aside {
+  flex-shrink: 0;
+  width: 41.8181818182vw;
+  height: 41.8181818182vw;
+  max-width: 28.75rem;
+  max-height: 28.75rem;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 3.625rem;
+  padding: 2.375rem;
+  background: #fff;
+}
+@media screen and (max-width: 768px) {
+  .product .card__aside {
+    width: 31.6vh;
+    height: 31.6vh;
+    margin-right: 0;
+    padding: 3.3vh;
+  }
+}
+@media screen and (max-width: 480px) {
+  .product .card__aside {
+    width: 61.0416666667vw;
+    height: 61.0416666667vw;
+    padding: 6.875vw;
+  }
+}
+.product__body {
+  display: flex;
+  flex-direction: column;
 }
 
 /*-------------------- layout reviews --------------------*/
